[package]
name = "waapir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
strum = "0.25.0"
strum_macros = "0.25.0"
wampire = "0.2.1"
log = "0.4"
iced = "0.10"

[patch.crates-io]
wampire = { git = "https://github.com/boboshan/wampire.git" }
